<resources>
    <string name="app_name">OPAuth</string>

    <string name="id">ID</string>
    <string name="prompt_id">email ID</string>
    <string name="password">Password</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="app">BhatSahab Auth</string>
    <string name="app_icon">OnePlus</string>
    <string name="never_settle">Never Settle</string>
</resources>
