<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:src="@drawable/oneplus"
                android:contentDescription="@string/app_icon"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/app"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/textColor"
                android:fontFamily="@font/rubik_bold"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/shape"
                android:gravity="center"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/prompt_id"
                        android:textColorHint="#858585"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/textColor"
                        android:autofillHints="@string/id" />

                </LinearLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textColor="@color/textColor" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:visibility="invisible"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/never_settle"
            android:contentDescription="@string/never_settle" />
    </LinearLayout>
</RelativeLayout>